--- a/bamba-jk-krazykar/readme.textile
+++ b/bamba-jk-krazykar/readme.textile
@@ -1,1 +1,6 @@
 Krazy Kart
+
+1. Inspired from the the popular game outrun. Made with love using java script to have a more dynamic interaction with the user.
+2. Race against the time with randomly generated road to have a different experience every play. 
+3. Use your keyboard's arrow keys to control the car. Up/Down is the acceleration and brake and the Left/Right is to steer the car.
+4. Feedbacks are welcome to fine tune the control of the car
